--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
     "url": "https://github.com/JadeTechCreations/e3/issues"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.0",
+    "autoprefixer": "^6.0.3",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "~3.8.8",
     "gulp-concat": "~2.4.1",
     "gulp-connect": "~2.0.6",
@@ -36,9 +45,28 @@
     "gulp-inject": "~1.0.2",
     "gulp-clean": "~0.3.1",
     "gulp-replace": "~0.4.0",
-    "gulp-angular-extender": "~0.1.0"
+    "gulp-angular-extender": "~0.1.0",
+    "html-webpack-plugin": "^2.7.1",
+    "istanbul-instrumenter-loader": "^1.0.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^1.1.0",
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
+    "node-libs-browser": "^2.0.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.4",
+    "postcss-loader": "^1.1.1",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "webpack": "^1.13.2"
+    "angular": "^1.5.0"
   }
 }
